--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,29 @@
-html, body {
-  margin: 0;
-  padding: 0;
-}
-canvas {
-  display: block;
-}
+  * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    
+    body {
+      background-color: #000000;
+      color: #ffffff;
+      font-family: Helvetica, Arial, sans-serif;
+      padding: 50px;
+    }
+    
+    h1 {
+      font-size: 24px;
+      font-weight: normal;
+      margin-bottom: 12px;
+    }
+    
+    p {
+      font-size: 14px;
+      color: #cccccc;
+      margin-bottom: 30px;
+      max-width: 600px;
+    }
+    
+    #canvas-container {
+      display: inline-block;
+    }
