--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,12 @@
       background-color: #000000;
       color: #ffffff;
       font-family: Helvetica, Arial, sans-serif;
+      font-weight: 300 !important;
       padding: 25px;
     }
     
     h1 {
       font-size: 36px;
-      font-weight: light;
       margin-bottom: 12px;
     }
     
