--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      font-weight: 300;   
     }
     
     body {
@@ -13,13 +14,11 @@
     
     h1 {
       font-size: 36px;
-      font-weight: 300 !important;
       margin-bottom: 12px;
     }
     
     p {
       font-size: 14px;
-      font-weight: 300 !important;
       margin-bottom: 30px;
       max-width: 600px;
     }
